--- a/t1.html
+++ b/t1.html
@@ -11,5 +11,10 @@
 
 <image-gallery data-images="./imageData.json"></image-gallery>
 
+<image-gallery>
+<img src="image1.jpg" alt="image 1" data-description="<p>a description for image 1</p>">
+<img src="image2.jpg" alt="image 2" data-description="<p>a description for image 2</p>">
+</image-gallery>
+
 </body>
 </html>
