--- a/t1.html
+++ b/t1.html
@@ -3,11 +3,15 @@
 <head>
 <meta charset="UTF-8" />
 <title>Image Gallery Component</title>
+
+<link rel="stylesheet" href="./imageGallery.css"/>
+
 <script type="module" src="imageGallery.wc.js"></script>
 
 </head>
 <body>
 <h1>Image Gallery Component</h1>
+
 
 <image-gallery data-images="./imageData.json"></image-gallery>
 
