* updated imageGalleryComponentDemo.html

--- a/imageGalleryComponentDemo.html
+++ b/imageGalleryComponentDemo.html
@@ -10,15 +10,15 @@
 
 </head>
 <body>
-<h1>Image Gallery Component</h1>
+<h1>Image Gallery Component Demo</h1>
 
 <!-- use with separate json data file... -->
 <image-gallery data-images="./imageData.json"></image-gallery>
 
 <!-- use with inline images; list with buttons is constructed by the component on the fly -->
 <image-gallery>
-<img src="https://web.mit.edu/12.114/05_fall/www/images/2005.09.19_bevertail/pix_IMG_0808.jpg" alt="photo" data-description="<p>I have no idea what this is...</p>">
-<img src="https://web.mit.edu/12.114/05_fall/www/images/2005.09.19_bevertail/pix_IMG_08061.jpg" alt="another photo" data-description="<p>another unknown something...</p>">
+<img width="20px" height="26px" src="https://web.mit.edu/12.114/05_fall/www/images/2005.09.19_bevertail/pix_IMG_0808.jpg" alt="photo" data-description="<p>I have no idea what this is...</p>">
+<img width="20" height="26" src="https://web.mit.edu/12.114/05_fall/www/images/2005.09.19_bevertail/pix_IMG_08061.jpg" alt="another photo" data-description="<p>another unknown something...</p>">
 </image-gallery>
 
 </body>
